tests/test_assets/semantic/invalid/control_flow/unreachable_after_loop_exit.cog
unreachable_after_break::(
    condition: bool
) -> void {
    while condition {
        break;
        value := 1;
    }
}

unreachable_after_continue::(
    condition: bool
) -> void {
    while condition {
        continue;
        value := 2;
    }
}

unreachable_after_infinite_while::() -> void {
    while true {
    }

    value := 3;
}
