tests/test_assets/semantic/invalid/control_flow/unreachable_after_loop_exit.expected
semantic error at line 6: unreachable statement
semantic error at line 15: unreachable statement
semantic error at line 23: unreachable statement
3 semantic errors generated.
